syntax = "proto3";

package org.example.grpc.org.example.url_service;

import "google/protobuf/timestamp.proto";

message Usuario {
  string username = 1;
  string password = 2;
}

message ShortURL {
  string id = 1;
  string codigo = 2;
  string urlBase = 3;
  string urlCorta = 4;
  google.protobuf.Timestamp fechaCreacion = 5;
}

message EstadisticaURL {
  string id = 1;
  int32 cantidadAccesos = 2;
  map<string, int32> navegadores = 3;
  map<string, int32> direccionesIP = 4;
  map<string, int32> dominiosClientes = 5;
  map<string, int32> plataformasSO = 6;
  map<string, int32> horasAcceso = 7;
  ShortURL shortURL = 8;
}

service UrlService {
  rpc ListUrls(Usuario) returns (ListUrlsResponse);
  rpc CreateUrl(CreateUrlRequest) returns (CreateUrlResponse);
}

message ListUrlsResponse { repeated EstadisticaURL urls = 1; }

message CreateUrlRequest {
  string user_id = 1;
  string full_url = 2;
  bytes preview_image = 3;
}

message CreateUrlResponse { EstadisticaURL url = 1; }
